2024-12-28  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* Makefile.devel (GNULIB_CORE): Use the new names of renamed gnulib
	modules.

2024-12-05  Bruno Haible  <bruno@clisp.org>

	Revisit Linux/riscv64 builds.
	* Makefile.devel (multibuild-linux-riscv64): Enable all build variants
	that work.

2024-11-23  Bruno Haible  <bruno@clisp.org>

	Upgrade ASDF. This fixes a bug on Haiku.
	Reported by Alexandru Popa <alpopa@gmail.com>
	in <https://sourceforge.net/p/clisp/mailman/message/58844235/>.
	* modules/asdf/asdf.lisp: Upgrade to upstream 3.3.6.7.
	* modules/asdf/asdf.xml: Update.
	* doc/impnotes.html: Regenerated.

2024-11-19  Bruno Haible  <bruno@clisp.org>

	Add comments.
	* Makefile.devel (build-porting*): Add comments regarding *_WORKS macros
	in lispbibl.d.

2024-11-18  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/loongarch64.
	* lispbibl.d (LOONGARCH64): New macro.
	(C_CODE_ALIGNMENT, intDsize, varobject_alignment, SP_register,
	ASM_get_SP_register, SP_DOWN): Define for loongarch64.
	(MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END, SINGLEMAP_*,
	HEAPCODES1BIT_WITH_TRIVIALMAP_WORKS, HEAPCODES1BIT_WITH_MALLOC_WORKS,
	GENERIC64C_HEAPCODES_WORKS, TYPECODES_WITH_TRIVIALMAP_WORKS,
	TYPECODES_WITH_MALLOC_WORKS): Define for Linux/loongarch64.
	* Makefile.devel (multibuild-linux-loongarch64): New target. Enable all
	build variants that work.
	* makemake.in (XCFLAGS): For Linux/loongarch64, enable all optimizations
	except ASM.

2024-11-17  Bruno Haible  <bruno@clisp.org>

	Review memory mapping on Linux/powerpc64 with newer Linux kernels.
	* lispbibl.d: Update comments.

2024-11-17  Bruno Haible  <bruno@clisp.org>

	Review memory mapping on Linux/arm64 with newer Linux kernels.
	* lispbibl.d (MALLOC_ADDRESS_RANGE): Move override.

2024-11-16  Bruno Haible  <bruno@clisp.org>

	Fix a compiler bug that would lead to a wrong value of STACK.
	Reported by Paul F. Dietz
	at <https://gitlab.com/gnu-clisp/clisp/issues/11>.