@@ -1,3 +1,9 @@
+2025-04-26  Bruno Haible  <bruno@clisp.org>
+
+	Work around a gcc 15.1.0 bug on x86_64.
+	* package.d (rehash_symtab): When compiled by GCC 15, disable all
+	optimizations.
+
 2024-12-28  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
